--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Bikes!</title>
+    <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 
 </html>
