--- a/index.html
+++ b/index.html
@@ -7,4 +7,37 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 
+<body>
+    <div id="wrapper">
+        <nav id="main-navigation">
+            <ul>
+                <li><a href="#" class="current">Bikes</a></li>
+                <li><a href="#">Best Buy</a></li>
+                <li><a href="#">Offers</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">About Us</a></li>
+            </ul>
+        </nav>
+
+        <div id="lead-banner">
+            <img src="images/lead-banner.jpg" alt="Bikes!">
+        </div>
+
+        <section id="shop">
+            <img class="product-image" src="images/bike.jpg" alt="RetroSyperb image">
+            <h2 class="product-name">Bicycle RetroSyperb Vii #1</h2>
+            <span class="price">LKR. 71,999.00</span>
+            <a class="add-to-cart" href="#">Add to shopping cart</a>
+            <img class="rating" src="images/stars.png" alt="star-rating">
+        </section>
+
+        <div id="fotter-banner">
+            <img src="images/footer.jpg" alt="pic of bike">
+        </div>
+
+    </div>
+
+</body>
+
 </html>
